connections can be disconnected properly