@@ -1,3 +1,5 @@
 javac --class-path=. --module-path "C:\Users\rdbas\Java Libraries\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls KeyData.java
 javac --class-path=. --module-path "C:\Users\rdbas\Java Libraries\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls Encrypt.java
 javac --class-path=. --module-path "C:\Users\rdbas\Java Libraries\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls Main.java
+javac --class-path=. --module-path "C:\Users\rdbas\Java Libraries\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls ServerHandler.java
+javac --class-path=. --module-path "C:\Users\rdbas\Java Libraries\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls SocketHandler.java
